feat: add npx installer
Run 'npx pi-mcp-adapter' to install. Downloads extension files,
installs dependencies, and configures settings.json automatically.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "pi-mcp-adapter",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "MCP (Model Context Protocol) adapter extension for Pi coding agent",
   "type": "module",
   "license": "MIT",
   "author": "Nico Bailon",
+  "bin": {
+    "pi-mcp-adapter": "./install.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/nicobailon/pi-mcp-adapter"
@@ -23,6 +26,7 @@
     "extensions": ["./index.ts"]
   },
   "files": [
+    "install.js",
     "index.ts",
     "types.ts",
     "config.ts",
