feat: direct tool registration, /mcp interactive panel, subagent MCP support
Promote specific MCP tools to first-class Pi tools via directTools config so
they appear alongside builtins without proxy search. New /mcp TUI panel for
toggling tools, viewing token costs, and managing server connections. Subagent
processes receive direct tool config via MCP_DIRECT_TOOLS env var. Auto-enriched
proxy description includes server names and tool counts from cache.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pi-mcp-adapter",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "MCP (Model Context Protocol) adapter extension for Pi coding agent",
   "type": "module",
   "license": "MIT",
@@ -40,6 +40,7 @@
     "metadata-cache.ts",
     "npx-resolver.ts",
     "oauth-handler.ts",
+    "mcp-panel.ts",
     "README.md",
     "CHANGELOG.md",
     "ARCHITECTURE.md",
